# SafeGuard

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Procfile  README.md  docker-compose.yml  main.py  manage.py  requirements.txt
AI Agent Safeguard/: Dockerfile  README.md  pyproject.toml  requirements.txt
AI Agent Safeguard/app/: server.py
AI Agent Safeguard/copilot/ai-agent-service/: manifest.yml
backend/: .env.example  Dockerfile  README.md  auth.py  config.py  db.py  knowledge.py  mailer.py  rate_limit.py  realtime.py  requirements.txt  resources_fixture.json  server.py  services_ai.py  services_incidents.py  startup.py  state.py  storage.py
backend/knowledge/: afghanistan_safety.md  car_safety.md  drc_safety.md  emergency_procedures.md  ethiopia_safety.md  haiti_safety.md  libya_safety.md  myanmar_safety.md  palestine_resources.md  sahel_safety.md  somalia_safety.md  south_sudan_safety.md  sudan_safety.md  syria_safety.md  ukraine_contacts.md  yemen_safety.md
backend/routers/: admin.py  ai.py  auth.py  emergency.py  files.py  incidents.py  resources.py  seed.py  system.py
flow_alerts/: settings.py  urls.py  wsgi.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.js
incidents/: admin.py  agents.py  dynamodb.py  geocoding.py  models.py  notifications.py  s3.py  urls.py  views.py
scripts/: Boto3_AWS_S3.py  configure_s3_access.py  configure_s3_cors.py  setup_sns.py  sync_subscription_status.py  test_incident_notification.py  verify_subscriber.py
tests/: test_notifications.py  test_subscriber.py
(+58 files in other folders)
