[tool.poetry]
name = "AI Agent Safeguard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pypdf = "^5.3.0"
pydantic = "^2.10.6"
ratelimit = "^2.2.1"
langchain = "^0.3.19"
langchain-core = "^0.3.37"
langchain-community = "^0.3.18"
langchain-openai = "^0.3.6"
langgraph = "^0.2.74"
langsmith = "^0.3.10"
faiss-cpu = "^1.10.0"
python-dotenv = "^1.0.1"
pytz = "^2025.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
